    10-15%.   Gave the "state" internals a good solid 
    cleanup with less complexity, datamembers, 
    method calls, blank dictionary creates.

  - Documentation clarification for query.delete()
    [ticket:1689]

  - Fixed cascade bug in many-to-one relation() when attribute
    was set to None, introduced in r6711 (cascade deleted
    items into session during add()).
    
- sql
  - The most common result processors conversion function were
    moved to the new "processors" module.  Dialect authors are
    encouraged to use those functions whenever they correspond
    to their needs instead of implementing custom ones.

  - SchemaType and subclasses Boolean, Enum are now serializable,
    including their ddl listener and other event callables.
    [ticket:1694] [ticket:1698]
    
  - Added math negation operator support, -x.
  
  - FunctionElement subclasses are now directly executable the
    same way any func.foo() construct is, with automatic 
    SELECT being applied when passed to execute().
    
  - The "type" and "bind" keyword arguments of a func.foo() 
    construct are now local to "func." constructs and are 
    not part of the FunctionElement base class, allowing 
    a "type" to be handled in a custom constructor or 
    class-level variable.
    
  - Restored the keys() method to ResultProxy.
  
  - The type/expression system now does a more complete job
    of determining the return type from an expression
    as well as the adaptation of the Python operator into 
    a SQL operator, based on the full left/right/operator
    of the given expression.  In particular
    the date/time/interval system created for Postgresql
    EXTRACT in [ticket:1647] has now been generalized into
    the type system.   The previous behavior which often
    occured of an expression "column + literal" forcing
    the type of "literal" to be the same as that of "column"
    will now usually not occur - the type of 